--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -330,6 +330,8 @@
 													<li class="topline"><a href="../invordsubensamble/startup.agnux">Costos</a></li>
 													-->
 													<li class="topline"><a href="../invcontrolcostos/startup.agnux">Control de Costos</a></li>
+													<li class="topline"><a href="../invactualizaprecios/startup.agnux">Actualizar de Precios</a></li>
+													
 													<!--
 													<li class="topline"><a href="#">Actualizar Precios</a></li>
 													<li class="topline"><a href="#">Existencias F&iacute;sicas</a></li>
