--- a/erp-quimicos/src/main/webapp/vm/invactualizaprecios/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/invactualizaprecios/startup.vm
@@ -6,15 +6,15 @@
         #include("${layoutheader}")
         
         <!--  css for this catalogo -->
-        <link rel="stylesheet" href="../../css/modalbox/invcontrolcostos/formaInvControlCosto.css" type="text/css" />
-        <link rel="stylesheet" href="../../css/modalbox/invcontrolcostos/formaBuscaproducto.css" type="text/css" />
+        <link rel="stylesheet" href="../../css/modalbox/invactualizaprecios/formaInvActualizaPrecio.css" type="text/css" />
+        <link rel="stylesheet" href="../../css/modalbox/invactualizaprecios/formaBuscaproducto.css" type="text/css" />
         
         <!--  js for this catalogo -->
         <script type="text/javascript" src="../../js/components/jquery-form/jquery-form.js"></script>
         <script type="text/javascript" src="../../js/components/formatearnumeros/agrega_comas.js"></script>
-        <script type="text/javascript" src="../../js/components/modalbox/invcontrolcostos/modalboxInvControlCosto.js"></script>
-        <script type="text/javascript" src="../../js/components/modalbox/invcontrolcostos/modalboxBuscaproducto.js"></script>
-        <script type="text/javascript" src="../../js/implements/invcontrolcostos/index.js" ></script>
+        <script type="text/javascript" src="../../js/components/modalbox/invactualizaprecios/modalboxInvActualizaPrecio.js"></script>
+        <script type="text/javascript" src="../../js/components/modalbox/invactualizaprecios/modalboxBuscaproducto.js"></script>
+        <script type="text/javascript" src="../../js/implements/invactualizaprecios/index.js" ></script>
 		
         #include("${layoutmenu}")
         
@@ -142,14 +142,14 @@
 		
 		
 		
-        <!--form for invcontrolcostos -->
-        <form id="formainvcontrolcostos00" action="edit.json" method="POST" >
+        <!--form for invactualizaprecios -->
+        <form id="formainvactualizaprecios00" action="edit.json" method="POST" >
         <!--clase la quite por causar problemas      tabulador -->
-                <div id="div_one" class="panelcito_modal invcontrolcostos_div_one"  style="display:none;" title="">
+                <div id="div_one" class="panelcito_modal invactualizaprecios_div_one"  style="display:none;" title="">
                     <input type="hidden" name="identificador" value="0">
                     <input type="hidden" name="calculo_simulacion" value="0">
                     
-                    <div id="div_two" title="" class="invcontrolcostos_div_two">
+                    <div id="div_two" title="" class="invactualizaprecios_div_two">
                         <div class="columns on-2">
                             <div class="fixed column" style="width:1118px; padding-left:6px;"><strong>Control de Costos</strong></div>
                             <div class="fixed column" style="width:20px; height:25px;">
@@ -158,7 +158,7 @@
                         </div>
                     </div>
                     
-                    <div id="div_three" title="" class="invcontrolcostos_div_three">
+                    <div id="div_three" title="" class="invactualizaprecios_div_three">
                         <div class="columns" >
                             <div class=" fixed column">
                                 <ul class="pestanas">
